--- a/_includes/about.html
+++ b/_includes/about.html
@@ -11,15 +11,20 @@
                     <p>{{site.author-about}}</p>
                     <br>
                     <div class="container columns is-centered">
-                        <div>
+                        <!-- <div>
                             <a href="{{site.url}}{{site.baseurl}}/#contact"
                                 class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined">Contact
                                 Me</a>
                             </a>
+                        </div> -->
+                        <div>
+                            <a href="{{site.url}}{{site.baseurl}}/my_bio"
+                                class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined">My Bio</a>
+                            </a>
                         </div>
                         <div>
-                            <a href="{{site.url}}{{site.baseurl}}/blog"
-                                class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined">Blog</a>
+                            <a href="{{site.url}}{{site.baseurl}}/project"
+                                class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined">Project</a>
                             </a>
                         </div>
                     </div>
