--- a/_includes/resume1.html
+++ b/_includes/resume1.html
@@ -54,7 +54,7 @@
 				    <h3 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Summary</h3>
 				    <div class="resume-section-content">
 					    <p class="mb-0">An experienced, resourceful and highly talented Sr. Research Scientist with different and proficuous years working in multi-national groups. 
-							Accomplished and focused professional with demonstrated experience in the study of the structures and prhysical properties of various materials, 
+							Accomplished and focused professional with demonstrated experience in the study of the structures and physical properties of various materials, 
 							from the micro to the macroscale level. Recognized for professionalism, positive mental attitude, commitment to excellence, and natural ability 
 							for critical thinking and complex problems solving. Excellent interpersonal skills, self-motiveted, and able to communicate and collaborate 
 							effectively with co-workers at all levels. </p>
