--- a/_includes/resume1.html
+++ b/_includes/resume1.html
@@ -242,24 +242,92 @@
 						    </div>
 					    </section><!--//education-section-->
 					    
-						<section class="resume-section education-section mb-5">
+						<section class="resume-section conference-section mb-5">
 						    <h3 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Relevant Conferences & Seminars</h3>
-						    <div class="resume-section-content">
-							    <ul class="list-unstyled">
-								    <li class="mb-2">
-								        <div class="resume-degree font-weight-bold">MSc in Computer Science</div>
-								        <div class="resume-degree-org">University College London</div>
-								        <div class="resume-degree-time">2010 - 2011</div>
-								    </li>
+						    <div class="resume-section-content">							
+								<ul class="list-unstyled">
 								    <li>
-								        <div class="resume-degree font-weight-bold">BSc Maths and Physics</div>
-								        <div class="resume-degree-org">Imperial College London</div>
-								        <div class="resume-degree-time">2007 - 2010</div>
+										<span class="resume-conf"><b>APS March Meeting 2021</b> - Talk</span>
+										<span class="resume-conf-time"> ( March 15–19, 2021 | <b>online</b> )</span>
 								    </li>
+									<li>
+										<span class="resume-conf"><b>DPG Spring Meeting 2019</b> - Talk</span>
+										<span class="resume-conf-time"> ( March 31 – April 05, 2019 | <b>Regensburg - Germany</b> )</span>
+								    </li>
+									<li>
+										<span class="resume-conf"><b>JEMS Conference 2018</b> - Talk</span>
+										<span class="resume-conf-time"> ( September 3–7, 2018 | <b>Mainz - Germany</b> )</span>
+								    </li>
+									<li>
+										<span class="resume-conf"><b>Journée d’échange MiChem</b> - Invited Talk</span>
+										<span class="resume-conf-time"> ( June 15, 2018 | <b>Paris - France</b> )</span>
+								    </li>
+									<li>
+										<span class="resume-conf"><b>WE-Heraeus-Seminar</b> - Invited Talk</span>
+										<span class="resume-conf-time"> ( June 4–8, 2018 | <b>Bad Honnef - Germany</b> )</span>
+								    </li>
+									<li>
+										<span class="resume-conf"><b>APS March Meeting 2018</b> - Talk</span>
+										<span class="resume-conf-time"> ( June 4–8, 2018 | <b>Los Angeles - Germany</b> )</span>
+								    </li>
+								    <!--
+									<li>
+								        <div class="resume-conf font-weight-bold">BSc Maths and Physics</div>
+								        <div class="resume-conf-org">Imperial College London</div>
+								        <div class="resume-conf-time">2007 - 2010</div>
+								    </li>
+									-->
 							    </ul>
+								
 						    </div>
 					    </section>
-						<!--//education-section-->
+						<!--//conference-section-->
+
+						<section class="resume-section publications-section mb-5">
+						    <h3 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Major Pubblications</h3>
+						    <div class="resume-section-content">							
+								<ul class="list-unstyled">
+									* O. Vaccarelli, et al, Phys. Rev. B 99 (6), 064416 (2019).
+									* F. Pepe, et al, Quantum Com. XVI 10771, 1077102 (2018). 									
+									* O. Vaccarelli, et al, Phys. Rev. B 96 180406(R) (2017).
+									* G. Rousse, et al, Phys. Rev. B 95 144103 (2017).
+									* F. Pepe, et al, Journal of Optics 19.11 114001 (2017).
+								    <li>
+										<span class="resume-conf"><b>APS March Meeting 2021</b> - Talk</span>
+										<span class="resume-conf-time"> ( March 15–19, 2021 | <b>online</b> )</span>
+								    </li>
+									<li>
+										<span class="resume-conf"><b>DPG Spring Meeting 2019</b> - Talk</span>
+										<span class="resume-conf-time"> ( March 31 – April 05, 2019 | <b>Regensburg - Germany</b> )</span>
+								    </li>
+									<li>
+										<span class="resume-conf"><b>JEMS Conference 2018</b> - Talk</span>
+										<span class="resume-conf-time"> ( September 3–7, 2018 | <b>Mainz - Germany</b> )</span>
+								    </li>
+									<li>
+										<span class="resume-conf"><b>Journée d’échange MiChem</b> - Invited Talk</span>
+										<span class="resume-conf-time"> ( June 15, 2018 | <b>Paris - France</b> )</span>
+								    </li>
+									<li>
+										<span class="resume-conf"><b>WE-Heraeus-Seminar</b> - Invited Talk</span>
+										<span class="resume-conf-time"> ( June 4–8, 2018 | <b>Bad Honnef - Germany</b> )</span>
+								    </li>
+									<li>
+										<span class="resume-conf"><b>APS March Meeting 2018</b> - Talk</span>
+										<span class="resume-conf-time"> ( June 4–8, 2018 | <b>Los Angeles - Germany</b> )</span>
+								    </li>
+								    <!--
+									<li>
+								        <div class="resume-conf font-weight-bold">BSc Maths and Physics</div>
+								        <div class="resume-conf-org">Imperial College London</div>
+								        <div class="resume-conf-time">2007 - 2010</div>
+								    </li>
+									-->
+							    </ul>
+								
+						    </div>
+					    </section>
+						<!--//pubblications-section-->
 
 				    </div>
 				    <div class="col-lg-3">
