--- a/_includes/resume1.html
+++ b/_includes/resume1.html
@@ -287,35 +287,24 @@
 						    <h3 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Major Pubblications</h3>
 						    <div class="resume-section-content">							
 								<ul class="list-unstyled">
-									* O. Vaccarelli, et al, Phys. Rev. B 99 (6), 064416 (2019).
-									* F. Pepe, et al, Quantum Com. XVI 10771, 1077102 (2018). 									
-									* O. Vaccarelli, et al, Phys. Rev. B 96 180406(R) (2017).
-									* G. Rousse, et al, Phys. Rev. B 95 144103 (2017).
-									* F. Pepe, et al, Journal of Optics 19.11 114001 (2017).
-								    <li>
-										<span class="resume-conf"><b>APS March Meeting 2021</b> - Talk</span>
-										<span class="resume-conf-time"> ( March 15–19, 2021 | <b>online</b> )</span>
-								    </li>
-									<li>
-										<span class="resume-conf"><b>DPG Spring Meeting 2019</b> - Talk</span>
-										<span class="resume-conf-time"> ( March 31 – April 05, 2019 | <b>Regensburg - Germany</b> )</span>
-								    </li>
-									<li>
-										<span class="resume-conf"><b>JEMS Conference 2018</b> - Talk</span>
-										<span class="resume-conf-time"> ( September 3–7, 2018 | <b>Mainz - Germany</b> )</span>
-								    </li>
-									<li>
-										<span class="resume-conf"><b>Journée d’échange MiChem</b> - Invited Talk</span>
-										<span class="resume-conf-time"> ( June 15, 2018 | <b>Paris - France</b> )</span>
-								    </li>
-									<li>
-										<span class="resume-conf"><b>WE-Heraeus-Seminar</b> - Invited Talk</span>
-										<span class="resume-conf-time"> ( June 4–8, 2018 | <b>Bad Honnef - Germany</b> )</span>
-								    </li>
-									<li>
-										<span class="resume-conf"><b>APS March Meeting 2018</b> - Talk</span>
-										<span class="resume-conf-time"> ( June 4–8, 2018 | <b>Los Angeles - Germany</b> )</span>
-								    </li>
+									<li><a href="https://arxiv.org/abs/2101.08701"><b>Quantum-Mechanical Force Balance Between Multipolar Dispersion and Pauli Repulsion in Atomic van der Waals Dimers</b></a><br>
+										<span style="font-variant: small-caps;">O. Vaccarelli</span>, D.V. Fedorov, M. Stöhr, and A Tkatchenko, <em>arXiv preprint arXiv:2101.08701</em> (<b2>2021</b2>)
+									</li>
+									<li><a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.99.064416"><b>Triplet excitations in the frustrated spin ladder Li<sub>2</sub>Cu<sub>2</sub>O(SO<sub>4</sub>)<sub>2</sub></b></a><br>
+										<span style="font-variant: small-caps;">O. Vaccarelli</span>, A. Honecker, P. Giura, K. Béneut, B. Fåk, G. Rousse, and G. Radtke, <em>Phys. Rev. B 99 (6), 064416</em> (<b2>2019</b2>)
+									</li>
+									<li><a href="https://www.spiedigitallibrary.org/conference-proceedings-of-spie/10771/2321191/Exploring-plenoptic-properties-of-correlated-light/10.1117/12.2321191.short"><b>Exploring plenoptic properties of correlated light</b></a><br>
+										F. V. Pepe, F. Di Lena, <span style="font-variant: small-caps;">O. Vaccarelli</span>, A. Garuccio, G. Scarcelli, and M. D'Angelo, <em>Quantum Com. XVI 10771, 1077102</em> (<b2>2018</b2>)
+									</li>
+									<li><a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.96.180406"><b>Magnetic dimerization in the frustrated spin ladder Li<sub>2</sub>Cu<sub>2</sub>O(SO<sub>4</sub>)<sub>2</sub></b></a><br>
+										<span style="font-variant: small-caps;">O. Vaccarelli</span>, G. Rousse, A. Saúl, and G. Radtke, <em>Phys. Rev. B 96 180406(R)</em> (<b2>2017</b2>)
+									</li>
+									<li><a href="https://iopscience.iop.org/article/10.1088/2040-8986/aa7b0d/meta"><b>Exploring plenoptic properties of correlation imaging with chaotic light</b></a><br>
+										F. V. Pepe, <span style="font-variant: small-caps;">O. Vaccarelli</span>, A. Garuccio, G. Scarcelli, M. D’Angelo, <em>Journal of Optics 19.11 114001</em> (<b2>2017</b2>)
+									</li>
+									<li><a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.95.144103"><b>Low-temperature structural transition in the quasi-one-dimensional spin-1/2 compound Li<sub>2</sub>Cu<sub>2</sub>O(SO<sub>4</sub>)<sub>2</sub></b></a><br>
+										G. Rousse, J. Rodríguez-Carvajal, C. Giacobbe, M. Sun, <span style="font-variant: small-caps;">O. Vaccarelli</span>, and G. Radtke, <em>Phys. Rev. B 95 144103</em> (<b2>2017</b2>)
+									</li>
 								    <!--
 									<li>
 								        <div class="resume-conf font-weight-bold">BSc Maths and Physics</div>
@@ -331,79 +320,64 @@
 
 				    </div>
 				    <div class="col-lg-3">
-					    <section class="resume-section skills-section mb-5">
+					    <section class="resume-section skills-section mb-3">
 						    <h3 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Skills</h3>
-						    <div class="resume-section-content">
+						    <div class="resume-section-content-lan">
 						        <div class="resume-skill-item">
-							        <h4 class="resume-skills-cat font-weight-bold">Frontend</h4>
-							        <ul class="list-unstyled mb-4">
+							        <h5 class="resume-skills-cat font-weight-bold">Programming Languages</h5>
+							        <ul class="list-unstyled mb-3">
 								        <li class="mb-2">
-								            <div class="resume-skill-name">Angular</div>
-									        <div class="progress resume-progress">
+								            <div class="resume-skill-name">Python, Fortran, Bash</div>
+									        <!--
+											<div class="progress resume-progress">
 											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 98%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
+											-->
 								        </li>
 								        <li class="mb-2">
-								            <div class="resume-skill-name">React</div>
+								            <div class="resume-skill-name">Mathematica, MatLab</div>
+											<!--
 									        <div class="progress resume-progress">
 											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 94%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
+											-->
 								        </li>
 								        <li class="mb-2">
-								            <div class="resume-skill-name">JavaScript</div>
+								            <div class="resume-skill-name">HTML, CSS</div>
+											<!--
 									        <div class="progress resume-progress">
 											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 96%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
-								        </li>
-								        
-								        <li class="mb-2">
-								            <div class="resume-skill-name">Node.js</div>
-									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 92%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-											</div>
-								        </li>
-								        <li class="mb-2">
-								            <div class="resume-skill-name">HTML/CSS/SASS/LESS</div>
-									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 96%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-											</div>
+											-->
 								        </li>
 							        </ul>
 						        </div><!--//resume-skill-item-->
 						        
 						        <div class="resume-skill-item">
-						            <h4 class="resume-skills-cat font-weight-bold">Backend</h4>
+						            <h4 class="resume-skills-cat font-weight-bold">Modeling</h4>
 							        <ul class="list-unstyled">
 								        <li class="mb-2">
-								            <div class="resume-skill-name">Python/Django</div>
-									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 95%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-											</div>
+								            <div class="resume-skill-name">First-principle codes (QuantumEspresso, FHI-aims)</div>
 								        </li>
 								        <li class="mb-2">
-								            <div class="resume-skill-name">Ruby/Rails</div>
-									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 92%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-											</div>
+								            <div class="resume-skill-name">Mulecular Dynamics</div>
 								        </li>
 								        <li class="mb-2">
-								            <div class="resume-skill-name">PHP</div>
-									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 86%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-											</div>
-								        </li>
-								        <li class="mb-2">
-								            <div class="resume-skill-name">WordPress/Shopify</div>
-									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 82%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-											</div>
+								            <div class="resume-skill-name">Basic of Machine Learning</div>
 								        </li>
 							        </ul>
 						        </div><!--//resume-skill-item-->
 						        
 						        <div class="resume-skill-item">
-						            <h4 class="resume-skills-cat font-weight-bold">Others</h4>
-						            <ul class="list-inline">
+						            <h5 class="resume-skills-cat font-weight-bold">Others</h5>
+									<ul class="list-unstyled">
+										<li>Strong problem-solving and analytical skill with advanced programming and computational proficiency</li>
+										<li>Experience working in research teams on interdisciplinary projects at the intersection of physics, chemistry, and biology</li>
+										<li>Excellent attention to detail, strong verbal and written communication skills</li>
+										<li>Strong organizational and planning skills to complete and manage multiple projects simultaneously</li>
+									</ul>
+						            <!--
+									<ul class="list-inline">
 							            <li class="list-inline-item"><span class="badge badge-light">DevOps</span></li>
 							            <li class="list-inline-item"><span class="badge badge-light">Code Review</span></li>
 							            <li class="list-inline-item"><span class="badge badge-light">Git</span></li>
@@ -414,13 +388,14 @@
 							            <li class="list-inline-item"><span class="badge badge-light">WordPress</span></li>
 							            <li class="list-inline-item"><span class="badge badge-light">Shopify</span></li>
 						            </ul>
+									-->
 						        </div><!--//resume-skill-item-->
 						    </div><!--resume-section-content-->
 					    </section><!--//skills-section-->
 
 					    <section class="resume-section reference-section mb-5">
 						    <h3 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Awards</h3>
-						    <div class="resume-section-content">
+						    <div class="resume-section-content-lan">
 							    <ul class="list-unstyled resume-awards-list">
 								    <li class="mb-2 pl-4 position-relative">
 								        <i class="resume-award-icon fas fa-trophy position-absolute" data-fa-transform="shrink-2"></i>
@@ -459,7 +434,6 @@
 						    <div class="resume-section-content">
 							    <ul class="list-unstyled">
 								    <li class="mb-1">Professional volleyball player</li>
-								    <li class="mb-1">Learning Languages</li>
 								    <li class="mb-1">Board games</li>
 									<li class="mb-1">Mathematical puzzels</li>
 									<li class="mb-1">Cooking</li>
