--- a/_includes/resume1.html
+++ b/_includes/resume1.html
@@ -67,9 +67,9 @@
 						    <h3 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Professional Experience</h3>
 						    <div class="resume-section-content">
 							    <div class="resume-timeline position-relative">
-								    <article class="resume-timeline-item position-relative pb-5">
+								    <article class="resume-timeline-item position-relative pb-4">
 									    
-									    <div class="resume-timeline-item-header mb-2">
+									    <div class="resume-timeline-item-header mb-1">
 										    <div class="d-flex flex-column flex-md-row">
 										        <h3 class="resume-position-title font-weight-bold mb-1">Senior Research Scientist</h3>
 										        <div class="resume-company-name ml-auto">Luxembourg</div>
@@ -77,7 +77,7 @@
 											<div class="resume-position-time">2018 - Present | <b>Theoretical Chemical Physics group (TCP) - University of Luxembourg</b></div>
 									    </div><!--//resume-timeline-item-header-->
 									    <div class="resume-timeline-item-desc">
-										    <p> Computational and fundamental study of molecules and materials.</p>
+										    <p class="mb-1"> Computational and fundamental study of molecules and materials.</p>
 											<ul>
 											    <li>The structure and stability of molecular systems bonded by van der Waals (vdW) interactions are governed by the interplay between dispersion 
 													attraction and Pauli repulsion. Arising due to different physical origins, these forces do not seem to have a simple connection. The main goal 
@@ -115,7 +115,7 @@
 
 								    </article><!--//resume-timeline-item-->
 								    
-								    <article class="resume-timeline-item position-relative pb-5">
+								    <article class="resume-timeline-item position-relative pb-4">
 									    
 									    <div class="resume-timeline-item-header mb-2">
 										    <div class="d-flex flex-column flex-md-row">
@@ -125,7 +125,7 @@
 										    <div class="resume-position-time">2014 - 2015 | <b>Physics Department “M. Merlin” - University of Bari</b></div>
 									    </div><!--//resume-timeline-item-header-->
 									    <div class="resume-timeline-item-desc">
-										    <p>Ghost Imaging and Plenoptic Correlation.</p>
+										    <p class="mb-1"> Ghost Imaging and Plenoptic Correlation.</p>
 											<ul>
 												<li>In this project, I have studied Plenoptic imaging with thermal-light correlations. A camera is an optical device 
 													which creates a single image of an object. Ordinary cameras collect the light
@@ -164,7 +164,7 @@
 						    <div class="resume-section-content">
 							    <div class="resume-timeline position-relative">
 								    
-								    <article class="resume-timeline-item position-relative pb-5">
+								    <article class="resume-timeline-item position-relative pb-4">
 									    
 									    <div class="resume-timeline-item-header mb-2">
 										    <div class="d-flex flex-column flex-md-row">
@@ -174,7 +174,7 @@
 										    <div class="resume-position-time">2015 - 2018 | <b>Institut de minéralogie, de physique des matériaux et de cosmochimie (IMPMC) - Sorbonne University</b></div>
 									    </div><!--//resume-timeline-item-header-->
 									    <div class="resume-timeline-item-desc">
-										    <p><b>Thesis:</b>"Exotic phenomena in the new frustrated spin ladder Li<sub>2</sub>O(CuSO<sub>4</sub>)<sub>2</sub>"</p>
+										    <p class="mb-1"> <b>Thesis:</b>"Exotic phenomena in the new frustrated spin ladder Li<sub>2</sub>O(CuSO<sub>4</sub>)<sub>2</sub>"</p>
 										    <ul>
 												<li>During my PhD project, I have investigated the magnetic properties of a new frustrated two-leg spin ladder,
 													Li<sub>2</sub>O(CuSO<sub>4</sub>)<sub>2</sub>, through a combined experimental and theoretical approaches.
@@ -201,7 +201,7 @@
 									    </div><!--//resume-timeline-item-desc-->
 
 								    </article><!--//resume-timeline-item-->								    								    								    								    
-								    <article class="resume-timeline-item position-relative pb-5">
+								    <article class="resume-timeline-item position-relative pb-4">
 									    
 									    <div class="resume-timeline-item-header mb-2">
 										    <div class="d-flex flex-column flex-md-row">
@@ -211,7 +211,7 @@
 										    <div class="resume-position-time">2012 - 2014 | <b>Physics Department “M. Merlin” - University of Bari</b></div>
 									    </div><!--//resume-timeline-item-header-->
 									    <div class="resume-timeline-item-desc">
-										    <p><b>Thesis:</b>"Entanglement in many-body system"</p>
+										    <p class="mb-1"> <b>Thesis:</b>"Entanglement in many-body system"</p>
 										    <ul>
 												<li>In my Master thesis
 													I have studied the correlation between the components of a spin-1/2 Heisenberg chain interacting with an
@@ -243,7 +243,7 @@
 					    </section><!--//education-section-->
 					    
 						<section class="resume-section conference-section mb-5">
-						    <h3 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Relevant Conferences & Seminars</h3>
+						    <h3 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-2">Relevant Conferences & Seminars</h3>
 						    <div class="resume-section-content">							
 								<ul class="list-unstyled">
 								    <li>
@@ -266,7 +266,7 @@
 										<span class="resume-conf"><b>WE-Heraeus-Seminar</b> - Invited Talk</span>
 										<span class="resume-conf-time"> ( June 4–8, 2018 | <b>Bad Honnef - Germany</b> )</span>
 								    </li>
-									<li>
+									<li class="mb-0">
 										<span class="resume-conf"><b>APS March Meeting 2018</b> - Talk</span>
 										<span class="resume-conf-time"> ( June 4–8, 2018 | <b>Los Angeles - Germany</b> )</span>
 								    </li>
@@ -284,7 +284,7 @@
 						<!--//conference-section-->
 
 						<section class="resume-section publications-section mb-5">
-						    <h3 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Major Pubblications</h3>
+						    <h3 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-2">Major Pubblications</h3>
 						    <div class="resume-section-content">							
 								<ul class="list-unstyled">
 									<li><a href="https://arxiv.org/abs/2101.08701"><b>Quantum-Mechanical Force Balance Between Multipolar Dispersion and Pauli Repulsion in Atomic van der Waals Dimers</b></a><br>
@@ -320,7 +320,7 @@
 
 				    </div>
 				    <div class="col-lg-3">
-					    <section class="resume-section skills-section mb-3">
+					    <section class="resume-section skills-section mb-5">
 						    <h3 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Skills</h3>
 						    <div class="resume-section-content-lan">
 						        <div class="resume-skill-item">
@@ -354,7 +354,7 @@
 						        </div><!--//resume-skill-item-->
 						        
 						        <div class="resume-skill-item">
-						            <h4 class="resume-skills-cat font-weight-bold">Modeling</h4>
+						            <h5 class="resume-skills-cat font-weight-bold">Modeling</h5>
 							        <ul class="list-unstyled">
 								        <li class="mb-2">
 								            <div class="resume-skill-name">First-principle codes (QuantumEspresso, FHI-aims)</div>
