--- a/_includes/resume1.html
+++ b/_includes/resume1.html
@@ -324,7 +324,7 @@
 						    <h3 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Skills</h3>
 						    <div class="resume-section-content-lan">
 						        <div class="resume-skill-item">
-							        <h5 class="resume-skills-cat font-weight-bold">Programming Languages</h5>
+							        <h5 class="resume-skills-cat font-weight-bold mb-0">Programming Languages</h5>
 							        <ul class="list-unstyled mb-3">
 								        <li class="mb-2">
 								            <div class="resume-skill-name">Python, Fortran, Bash</div>
@@ -342,7 +342,7 @@
 											</div>
 											-->
 								        </li>
-								        <li class="mb-2">
+								        <li class="mb-2 pb-1">
 								            <div class="resume-skill-name">HTML, CSS</div>
 											<!--
 									        <div class="progress resume-progress">
@@ -354,22 +354,22 @@
 						        </div><!--//resume-skill-item-->
 						        
 						        <div class="resume-skill-item">
-						            <h5 class="resume-skills-cat font-weight-bold">Modeling</h5>
+						            <h5 class="resume-skills-cat font-weight-bold mb-0">Modeling</h5>
 							        <ul class="list-unstyled">
 								        <li class="mb-2">
 								            <div class="resume-skill-name">First-principle codes (QuantumEspresso, FHI-aims)</div>
 								        </li>
 								        <li class="mb-2">
-								            <div class="resume-skill-name">Mulecular Dynamics</div>
+								            <div class="resume-skill-name">Molecular Dynamics</div>
 								        </li>
-								        <li class="mb-2">
+								        <li class="mb-2 pb-3">
 								            <div class="resume-skill-name">Basic of Machine Learning</div>
 								        </li>
 							        </ul>
 						        </div><!--//resume-skill-item-->
 						        
 						        <div class="resume-skill-item">
-						            <h5 class="resume-skills-cat font-weight-bold">Others</h5>
+						            <h5 class="resume-skills-cat font-weight-bold mb-0">Others</h5>
 									<ul class="list-unstyled">
 										<li>Strong problem-solving and analytical skill with advanced programming and computational proficiency</li>
 										<li>Experience working in research teams on interdisciplinary projects at the intersection of physics, chemistry, and biology</li>
@@ -433,7 +433,7 @@
 						    <h3 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Interests</h3>
 						    <div class="resume-section-content">
 							    <ul class="list-unstyled">
-								    <li class="mb-1">Professional volleyball player</li>
+								    <li class="mb-1">Volleyball player</li>
 								    <li class="mb-1">Board games</li>
 									<li class="mb-1">Mathematical puzzels</li>
 									<li class="mb-1">Cooking</li>
