--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,10 +4,13 @@
             <div class="columns">
                 <div class="column is-one-fifth-desktop is-one-fifth-tablet is-one-fifth-fullhd">
                     <figure class="image">
-                        <img class="is-rounded" src="{{site.author-image}}" alt="{{site.author-name}}">
+                        <img class="is-rounded" src="assets/images/about.jpg" alt="">
                     </figure>
                 </div>
-                <div class="column has-text-left-desktop has-text-left-tablet has-text-left-fullhd has-text-left-widescreen">
+                <div class="columnabout">
+                <!--<div class="column has-text-left-desktop has-text-left-tablet has-text-left-fullhd has-text-left-widescreen">-->
+                    <p class="big"><b>Welcome to my personal website!</b></p>
+                    <br>
                     <p>{{site.author-about}}</p>
                     <br>
                     <div class="container columns is-centered">
