--- a/_includes/resume1.html
+++ b/_includes/resume1.html
@@ -34,7 +34,8 @@
 						    <!--<div class="title mb-3">Full Stack Developer</div>-->
 						    <ul class="list-unstyled">
 							    <li class="mb-2"><a href="#"><i class="far fa-envelope fa-fw mr-2" data-fa-transform="grow-3"></i>ovaccarelli@gmail.com</a></li>
-							    <li><a href="#"><i class="fas fa-mobile-alt fa-fw mr-2" data-fa-transform="grow-6"></i>+33 768 423177</a></li>
+							    <li class="mb-2"><a href="#"><i class="fas fa-mobile-alt fa-fw mr-2" data-fa-transform="grow-6"></i>+33 768 423177</a></li>
+								<li><a href="#"><i class="fas fa-solid fa-address-card fa-fw mr-2" data-fa-transform="grow-3"></i>Luxembourg</a></li>
 						    </ul>
 					    </div><!--//primary-info-->
 					    <div class="secondary-info ml-md-auto mt-2">
