--- a/_includes/resume1.html
+++ b/_includes/resume1.html
@@ -288,8 +288,8 @@
 						    <h3 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-2">Major Pubblications</h3>
 						    <div class="resume-section-content">							
 								<ul class="list-unstyled">
-									<li><a href="https://arxiv.org/abs/2101.08701"><b>Quantum-Mechanical Force Balance Between Multipolar Dispersion and Pauli Repulsion in Atomic van der Waals Dimers</b></a><br>
-										<span style="font-variant: small-caps;">O. Vaccarelli</span>, D.V. Fedorov, M. Stöhr, and A Tkatchenko, <em>arXiv preprint arXiv:2101.08701</em> (<b2>2021</b2>)
+									<li><a href="https://journals.aps.org/prresearch/abstract/10.1103/PhysRevResearch.3.033181"><b>Quantum-Mechanical Force Balance Between Multipolar Dispersion and Pauli Repulsion in Atomic van der Waals Dimers</b></a><br>
+										<span style="font-variant: small-caps;">O. Vaccarelli</span>, D.V. Fedorov, M. Stöhr, and A Tkatchenko, <em>Phys. Rev. Research 3, 033181</em> (<b2>2021</b2>)
 									</li>
 									<li><a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.99.064416"><b>Triplet excitations in the frustrated spin ladder Li<sub>2</sub>Cu<sub>2</sub>O(SO<sub>4</sub>)<sub>2</sub></b></a><br>
 										<span style="font-variant: small-caps;">O. Vaccarelli</span>, A. Honecker, P. Giura, K. Béneut, B. Fåk, G. Rousse, and G. Radtke, <em>Phys. Rev. B 99 (6), 064416</em> (<b2>2019</b2>)
