--- a/_includes/resume1.html
+++ b/_includes/resume1.html
@@ -288,8 +288,14 @@
 						    <h3 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-2">Major Pubblications</h3>
 						    <div class="resume-section-content">							
 								<ul class="list-unstyled">
+									<li><a href="https://arxiv.org/abs/2212.07305"><b>Optimized Quantum Drude Oscillators for Atomic and Molecular Response Properties</b></a><br>
+										<span style="font-variant: small-caps;">O. Vaccarelli</span>, S. Góger, A. Khabibrakhmanov, D.V. Fedorov, and A. Tkatchenko, <em>arXiv:2212.07305</em> (<b2>2023</b2>)
+									</li>
+									<li><a href="https://www.spiedigitallibrary.org/conference-proceedings-of-spie/12131/2622218/Control-of-particle-trapping-in-solid-state-nanopores-with-magnetic/10.1117/12.2622218.short?SSO=1"><b>Control of particle trapping in solid-state nanopores with magnetic functionalities: an overview</b></a><br>
+										A. N. Koya, J. Kuttruff, T. Tapani, A.V. Rodríguez, S. Sarkar, <span style="font-variant: small-caps;">O. Vaccarelli</span>, and N. Maccaferri, <em>Nanophotonics IX, 1213111</em> (<b2>2022</b2>)
+									</li>
 									<li><a href="https://journals.aps.org/prresearch/abstract/10.1103/PhysRevResearch.3.033181"><b>Quantum-Mechanical Force Balance Between Multipolar Dispersion and Pauli Repulsion in Atomic van der Waals Dimers</b></a><br>
-										<span style="font-variant: small-caps;">O. Vaccarelli</span>, D.V. Fedorov, M. Stöhr, and A Tkatchenko, <em>Phys. Rev. Research 3, 033181</em> (<b2>2021</b2>)
+										<span style="font-variant: small-caps;">O. Vaccarelli</span>, D.V. Fedorov, M. Stöhr, and A. Tkatchenko, <em>Phys. Rev. Research 3, 033181</em> (<b2>2021</b2>)
 									</li>
 									<li><a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.99.064416"><b>Triplet excitations in the frustrated spin ladder Li<sub>2</sub>Cu<sub>2</sub>O(SO<sub>4</sub>)<sub>2</sub></b></a><br>
 										<span style="font-variant: small-caps;">O. Vaccarelli</span>, A. Honecker, P. Giura, K. Béneut, B. Fåk, G. Rousse, and G. Radtke, <em>Phys. Rev. B 99 (6), 064416</em> (<b2>2019</b2>)
